feat: Neetcode 150 array and few array problems